# lau-hodge-decomposition-agents

./: AGENT.md  Cargo.toml  README.md
src/: agent.rs  betti.rs  complex.rs  decomposition.rs  forms.rs  hodge_star.rs  laplacian.rs  lib.rs  serre.rs  spectral.rs
